--- a/Nettbutikk/Views/NewUser/NewUser.cshtml
+++ b/Nettbutikk/Views/NewUser/NewUser.cshtml
@@ -1,5 +1,35 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+
+@model Nettbutikk.LoginnModel
+
 @{
+
+
+}
+
+@using (Html.BeginForm())
+{
+
+    <h1>login</h1>
+    <form method="post">
+
+        <p>
+            <span>Brukernavn<label>*</label></span>
+            <br />
+            @Html.EditorFor(LoginnModel => LoginnModel.Username, new { @htmlattributes = new { @class = "control-form" } })
+        </p>
+
+        <p>
+            <span>Passord<label>*</label></span>
+            <br />
+            @Html.EditorFor(LoginnModel => LoginnModel.Password, new { @htmlattributes = new { @class = "control-form" } })
+        </p>
+
+        <p>
+            <input type="submit" value="submit" />
+        </p>
+
+    </form>
 }
