Added new user functionality

--- a/Nettbutikk/Views/Shared/_Layout.cshtml
+++ b/Nettbutikk/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="UploadProduct" asp-action="UploadProduct">UploadProduct</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="NewUser" asp-action="NewUser">New User</a>
+                        </li>
                     </ul>
                 </div>
             </div>
