--- a/Nettbutikk/Views/UploadProduct/UploadProduct.cshtml
+++ b/Nettbutikk/Views/UploadProduct/UploadProduct.cshtml
@@ -9,7 +9,12 @@
 <form asp-action="UploadProduct" enctype="multipart/form-data">
     <div class="form-group">
         <label for="Picture">Choose Image File</label>
-        <input type="file" name="Picture" class="form-control" />
+        @{
+            /* <input type="file" name="Picture" class="form-control" /> Dette er original koden, den bruker også Model, men det gjøres gjennom controller fordi controller populerer dataen. */
+
+            /* Den under er hvis du vil sende data inn i model først, og så inn i controller :) */
+        }
+        @Html.EditorFor(UploadProductModel => UploadProductModel.picture, new {@htmlattributes = new {@class = "form-control"}})
     </div>
     <div class="form-group">
         <label for="Price">Price</label>
