--- a/Nettbutikk/Views/UploadProduct/UploadProduct.cshtml
+++ b/Nettbutikk/Views/UploadProduct/UploadProduct.cshtml
@@ -18,7 +18,13 @@
     </div>
     <div class="form-group">
         <label for="Price">Price</label>
-        <input type="number" min="0" name="pris" class="form-control" />
+        @{
+            /* <input type="number" min="0" name="pris" class="form-control" /> */
+            /* Samme med denne :) */
+        }
+
+        @Html.EditorFor(UploadProductModel => UploadProductModel.pris, new {@htmlattributes = new {@class = "form-control"}})
+
     </div>
     <button type="submit" class="btn btn-primary">Upload</button>
 </form>
